--- a/test.html
+++ b/test.html
@@ -6,6 +6,11 @@
     <h1>Profe</h1>
 </head>
 <body>
-    
+    <button onclick="">Kliko këtu</button>
+        var emri = prompt('Shkruani emrin tuaj:');
+        var mosha = prompt('Shkruani moshën tuaj:');
+        if(emri && mosha){
+            alert('Përdoruesi: ' + emri + ' | Mosha: ' + mosha);
+        }
 </body>
 </html>
