--- a/test.html
+++ b/test.html
@@ -6,11 +6,12 @@
     <h1>Profe</h1>
 </head>
 <body>
-    <button onclick="">Kliko këtu</button>
+    <button onclick="
         var emri = prompt('Shkruani emrin tuaj:');
         var mosha = prompt('Shkruani moshën tuaj:');
         if(emri && mosha){
             alert('Përdoruesi: ' + emri + ' | Mosha: ' + mosha);
         }
+    ">Kliko këtu</button>
 </body>
 </html>
