--- a/test.html
+++ b/test.html
@@ -13,5 +13,13 @@
             alert('Përdoruesi: ' + emri + ' | Mosha: ' + mosha);
         }
     ">Kliko këtu</button>
+
+     <button onclick="
+        var num1 = Number(prompt('Shkruani numrin e parë:'));
+        var num2 = Number(prompt('Shkruani numrin e dytë:'));
+        var shuma = num1 + num2;
+        alert('Shuma e dy numrave është: ' + shuma);
+    ">Llogarit Shumën</button>
+
 </body>
 </html>
