--- a/test.html
+++ b/test.html
@@ -32,6 +32,17 @@
         }
     ">Kontrollo Numrin</button>
 
+        <button onclick="
+        var fjala1 = prompt('Shkruani fjalën e parë:');
+        var fjala2 = prompt('Shkruani fjalën e dytë:');
+        if(fjala1 && fjala2){
+            var fjalia = 'Ju shkruat: ' + fjala1 + ' ' + fjala2;
+            alert(fjalia);
+        } else {
+            alert('Duhet të shkruani dy fjalë!');
+        }
+    ">Bashko Fjalët</button>
+
 
 </body>
 </html>
