--- a/test.html
+++ b/test.html
@@ -43,6 +43,17 @@
         }
     ">Bashko Fjalët</button>
 
+        <button onclick="
+        var fjala1 = prompt('Shkruani fjalën e parë:');
+        var fjala2 = prompt('Shkruani fjalën e dytë:');
+        if(fjala1 && fjala2){
+            alert('Fjala e përsëritur është: ' + fjala1 + ' ' + fjala2);
+        } else {
+            alert('Ju duhet të shkruani dy fjalë!');
+        }
+    ">Përsërit Fjalën</button>
+
+
 
 </body>
 </html>
