--- a/test.html
+++ b/test.html
@@ -51,19 +51,15 @@
         } else {
             alert('Ju duhet të shkruani dy fjalë!');
         }
-    ">Përsërit Fjalën</button>
         <button onclick="
-        var fjala1 = prompt('Shkruani fjalën e parë:');
-        var fjala2 = prompt('Shkruani fjalën e dytë:');
-        if(fjala1 && fjala2){
-            alert('Fjala e përsëritur është: ' + fjala1 + ' ' + fjala2);
+        var ushqimi = prompt('Çfarë hëngre për mëngjes?');
+        var pija = prompt('Çfarë pive për mëngjes?');
+        if(ushqimi && pija){
+            alert('Ti hëngre ' + ushqimi + ' dhe pive ' + pija + '.');
         } else {
-            alert('Ju duhet të shkruani dy fjalë!');
+            alert('Duhet të plotësosh të dyja përgjigjet!');
         }
-    ">Përsërit Fjalën</button>
-
-
-
+    ">Çfarë Hëngre për Mëngjes?</button>
 
 </body>
 </html>
